# GLSbot-discord

./: CMakeLists.txt  README.md
source/: GLSbot.cpp  GLSbot.h  main.cpp
source/discord/: gateway.cpp  gateway.h  voice.h
source/discord-api/: gateway.cpp  gateway.h  types.h
source/util/: order.h  types.h
source/websocket/: socket.cpp  socket.h  ws.cpp  ws.h
